<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/StartText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/UpdateInfo_heading"
            android:textSize="40sp"
            android:layout_marginTop="40sp"
            android:textColor="@color/colorFontPrimary"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="20sp"
            android:text="@string/entername"
            android:textSize="30sp"
            android:layout_marginTop="40sp"
            android:textColor="@color/colorFontPrimary"
            android:textStyle="normal"
            android:id="@+id/entername"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="15sp"
            android:textSize="30sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:hint="@string/entername_hint"
            android:id="@+id/name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="20sp"
            android:text="@string/entergrade"
            android:textSize="30sp"
            android:layout_marginTop="40sp"
            android:textColor="@color/colorFontPrimary"
            android:textStyle="normal"
            android:id="@+id/entergrade" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="15sp"
            android:textSize="30sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:hint="@string/entergrade_hint"
            android:id="@+id/grade"
            android:inputType="number"
            android:maxLength="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="20sp"
            android:text="@string/entersection"
            android:textSize="30sp"
            android:layout_marginTop="40sp"
            android:textColor="@color/colorFontPrimary"
            android:textStyle="normal"
            android:id="@+id/entersection"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="15sp"
            android:textSize="30sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:hint="@string/entersection_hint"
            android:id="@+id/section"
            android:inputType="textCapCharacters"
            android:maxLength="1"
            android:digits="A, B, C, D, E, F, G, H"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="20sp"
            android:text="@string/enterGRNumber"
            android:textSize="30sp"
            android:layout_marginTop="40sp"
            android:textColor="@color/colorFontPrimary"
            android:textStyle="normal"
            android:id="@+id/enterfpid"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="15sp"
            android:textSize="30sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:hint="@string/enterGRNumber_hint"
            android:id="@+id/grNo"
            android:inputType="number"
            android:maxLength="7"/>


        <Button
            android:id="@+id/updateInfoButton"
            android:layout_width="191dp"
            android:layout_height="57dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/round_shape_button"
            android:text="@string/Update_Info"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"/>

    </LinearLayout>
</ScrollView>